--- a/main.tex
+++ b/main.tex
@@ -57,14 +57,19 @@
 \section{Motivating Examples}
 \input{secs/examples}
 
-\section{System Flow}
+\section{System Overview}
 \input{secs/overview}
 
-\section{Building the Engine}
+\section{Offline: Synthesis Engine Construction}
 \input{secs/build}
 
-\section{Synthesis Stage}
+\section{Online: Fitting Functions to Examples}
 \input{secs/synth}
+
+\section{Evaluation}
+
+\section{Future Work}
+%dont call it future work
 
 \bibliographystyle{abbrvnat}
 \bibliography{sample}
