--- a/main.tex
+++ b/main.tex
@@ -26,8 +26,8 @@
 \usepackage{minted}
 \usepackage{tcolorbox}
 \usepackage{etoolbox}
-\BeforeBeginEnvironment{minted}{\begin{tcolorbox}}%
-\AfterEndEnvironment{minted}{\end{tcolorbox}}%
+%\BeforeBeginEnvironment{minted}{\begin{tcolorbox}}%
+%\AfterEndEnvironment{minted}{\end{tcolorbox}}%
 
 \begin{document}
 
@@ -54,22 +54,23 @@
 \end{abstract}
 
 
-\section{Motivating Examples}
+\section{Motivating Examples} \label{examples}
 \input{secs/examples}
 
 \section{System Overview}
 \input{secs/overview}
 
 \section{Offline: Synthesis Engine Construction}
-\input{secs/build}
+\input{secs/offline}
 
 \section{Online: Fitting Functions to Examples}
 \input{secs/synth}
 
 \section{Evaluation}
+\input{secs/eval}
 
-\section{Future Work}
-%dont call it future work
+\section{Conclusions}
+
 
 \bibliographystyle{abbrvnat}
 \bibliography{sample}
