--- a/main.tex
+++ b/main.tex
@@ -30,10 +30,11 @@
 
 \usepackage{comment}
 
+\usepackage{graphicx}
 
-\usepackage{minted}
-\usepackage{tcolorbox}
-\usepackage{etoolbox}
+%\usepackage{minted}
+%\usepackage{tcolorbox}
+%\usepackage{etoolbox}
 %\BeforeBeginEnvironment{minted}{\begin{tcolorbox}}%
 %\AfterEndEnvironment{minted}{\end{tcolorbox}}%
 
