--- a/secs/offline.tex
+++ b/secs/offline.tex
@@ -21,10 +21,10 @@ In order to derive these hypotheses, we require all higher order functions be be
 This is a simple procedure, but requires user knowledge of which parameters to the function will be given by the examples. 
 As an example consider 
 
-\begin{minted}[fontsize=\footnotesize]{haskell}
+\begin{lstlisting}[language=haskell]
 zipWith' :: (a -> b -> c) -> ([a],[b]) -> [c]
 zipWith' f (xs,ys) = zipWith f xs ys
-\end{minted}
+\end{lstlisting}
 %The liquidHaskell predicate applied to this signature will be of the effect of \texttt{len([a],[b]) = len([c])}.
 
 
@@ -48,7 +48,7 @@ As an example, take the code from section \ref{examples} for synthesizing a musi
 the user would have needed to provide a measure function for Music a.
 This measure will allow liquidHaskell to draw conclusions about the size of examples of type [Music a :$\to$ Music a], as well as conclusions about higher order functions over the Music data structure.
 
-\begin{minted}[fontsize=\footnotesize]{haskell}
+\begin{lstlisting}[language=haskell]
 import Euterpea
 
 {-@ measure len @-}
@@ -59,20 +59,20 @@ len m =
     m1 :+: m2 -> len m1 + len m2
     m1 :=: m2 -> len m1 + len m2
     Modify c m -> len m
-\end{minted}
+\end{lstlisting}
 
 
 \subsection{Extending Liquid Haskell}\label{extLiqHask}
 \markk{MARVIN - write something that makes more sense here}
 LiquidHaskell does not support certain popular syntax extensions to Haskell, such as LambdaCase (TODO list others). In the spirit of this work, we wish to support as much user defined code as possible. To this end, we can extend the refinement type system by allowing refinement type inference on repersentative examples of a higher order function. Take the following code \markk{find something from an actual library on hackage.}
 
-\begin{minted}[fontsize=\footnotesize]{haskell}
+\begin{lstlisting}[language=haskell]
 {-# LANGAUGE LambdaCase #-}
 fooMap :: (a -> b) -> [a] -> [b]
 fooMap f = \case
   [] -> []
   l -> map f l
- \end{minted}
+ \end{lstlisting}
 
 We generate and applying many examples with QuickCheck for each higher order function.
 We then apply a similar refinement type inference strategy as above to these examples.
