--- a/secs/synth.tex
+++ b/secs/synth.tex
@@ -5,11 +5,11 @@ Once the candidate functions are identified, a best-first search is initiated ov
 As in section \ref{HORtypeInf}, we also consider two cases for examples. The first where the example input and output types match up to the top level type constructor, and the the case where the types do not match.
 
 In the case that the types do match, we find the set of refinement types that the examples satisfy. Generating refinement type predicates about the size of the input and output, as in section \ref{HORTypes}, we run type inference on the input / output examples to \markk{ALEX, the following is wrong, what is a basic rtype anyway?} get a basic refinement type. Then, the input-output pairs are matched against a fixed set of predicates to enrich the refinement type. These predicates could impose constraints such as the input list being of equal, lesser, or greater size to the output list. \markk{end things being junk} For instance, the example set:
-\begin{minted}{haskell}
+\begin{lstlisting}[language=haskell]
 exs = [[1,2,3,4] :-> [1,3],
        [2,4,6,8] :-> [],
        [5,7] :-> [5,7]]
-\end{minted}
+\end{lstlisting}
 \noindent would have an inferred base type \markk{this isn't inferend right now, if we want to do that we would be using ghc, not LiqHask. check http://stackoverflow.com/questions/8963488/automatically-add-type-signatures-to-top-level-functions for a script to test} of \texttt{[Int] -> [Int]} and its final refinement type would be \texttt{xs:[Int] -> \{ ys:[Int] | len xs >= len ys \}}, since all of the examples suggest that the output list does not grow. The addition of these refinement type predicates dramatically reduces the search space in practice.
 
 Once these higher order functions have been culled from the pool of candidates, we iterate through each in best-first order. For each higher-order function, we supply it with arguments until it is compatible with the type signature implied by the example set. By convention, we take the final argument of the function to be the input, which means that higher-order functions that take multiple inputs have to explicitly be uncurried. Value types are satisfied by selecting from a pool of default values, and function types are satisfied by searching for first-order functions that would make the resulting signatures match. If it is not possible to find values that fit, the search moves on to the next higher-order function.
@@ -26,7 +26,7 @@ When two types have this relations, we will say type a \textit{generalizes} type
 \markk{someone probably wrote something about this, just need to find out where and cite.}
 If we have the higher order function map :: (a$\to$b) $\to$ [a] $\to$ [b] and the examples :: [Int] $\to$ [Int], then our component function f might have f::a$\to$b, or f::Int$\to$Int, or f::Int$\to$a, but certainly not f::[Bool]$\to$[Bool].
 
-\begin{minted}[fontsize=\footnotesize]{haskell}
+\begin{lstlisting}[language=haskell]
 map :: (a -> b) -> [a] -> [a]
 exs :: [Int] :-> [Int]
 
@@ -37,7 +37,7 @@ goodFxn1 :: Int  -> Int
 goodFxn2 :: Int  -> a
 goodFxn3 :: a    -> a
 badFxn   :: Bool -> Bool
-\end{minted}
+\end{lstlisting}
 
 \subsection{Handling folds}
 We identify two separate classes of higher order functions - those that take a single first order function, and those that need initial values in addition to a function. The \texttt{map} function only takes a first order function, while \texttt{foldl :: $(a\to b\to a)\to a\to [b]\to a$} requires an initial value for \texttt{a}. While the process described so far handles the former, initial values must also be addressed.
@@ -50,11 +50,11 @@ For lists, the unit element is []. However, there are two valid monoids for numb
 
 Requiring our users to write monoid instances may be a nuisance. Additionally, users may have some domain knowledge that a particular value may be useful in their applications of folds. If this is the case, users may write specializations of these functions to be used in synthesis. Since our system automatically considers functions defined in the user code base, \markk{finish sentence}.
 
-\begin{minted}[fontsize=\footnotesize]{haskell}
+\begin{lstlisting}[language=haskell]
 --to use 5 as an initial value for foldl
 foldl :: (a -> b -> a) -> [b] -> a
 foldl5 f i o = foldl f 5 i o
-\end{minted}
+\end{lstlisting}
 
 
 \subsection{Soundness and Completeness}
